add next steps to notes; save R script with updates

--- a/notes.tex
+++ b/notes.tex
@@ -430,11 +430,16 @@ Leaving the two gift terms on the end intact, I simplify in the same way as in S
 			\begin{itemize}
 				\item Obviously we can come up with other parameterizations in which this may look a little more reasonable
 					\begin{itemize}
-						\item But I think the first step is to calculate the high-type utility under the different scenarios and the different gifts and see what happens (since you get the indirect benefit of the gift--or do you since $e$ is too small?)
+						\item Go through welfare expressions carefully to understand where the welfare improvement is coming from
+						\item Can I derive an analytical expression for when the mediator enhances welfare?
+							\begin{itemize}
+								\item This is likely (surely?) to be when efficient gifts can't be sustained as a CSE
+							\end{itemize}
 					\end{itemize}
 				\item When g1 turns negative, is that exactly when $e=1$ can't be sustained? If we can get positive $g1$, not sure we'd need the mediator? It's not about $g1$, but the $\de_h^1$ condition.
 					\begin{itemize}
 						\item When g1 is negative, the constraint on $\de_h^1$ (see proof of Thm 3) becomes an upper bound. If it's negative, it means that no $\de_h$ exists to make separating possible.
+						\item I need a formal result to see clearly what is going on here
 					\end{itemize}
 			\end{itemize}
 	
