add details on parameterized welfare comparisons (mediator vs e=0)

--- a/notes.tex
+++ b/notes.tex
@@ -400,7 +400,7 @@ Leaving the two gift terms on the end intact, I simplify in the same way as in S
 \end{itemize}
 						
 						\vskip.3in
-						Utility comparisons (always for high type)
+						Welfare comparisons (always for high type)
 							\begin{itemize}
 								\item When $e=1$: $\frac{1}{1-d_h}\left\{pT(1+g^*) + (1-p)(W-D(1+g^*))\right\} - \frac{p(1-d_l)(D+T)}{(1-d_l)(1-pT)+(1-p)D}$
 									\begin{itemize}
@@ -422,15 +422,19 @@ Leaving the two gift terms on the end intact, I simplify in the same way as in S
 										\item Also $pg - \left(1 - \de \right) \left( T + D \right) \geq 0$ ($e$ version; this is WEAKER than the condition on $e$)
 										\item \color{red} For the parameterization in the paper, welfare is negative for $e=0$ and $e=0.01$, the only values of $e$ that lead to non-negative gifts; gifts range from 52.5 to 218.75	
 										\item \color{orange} Parameterization 2: welfare is 10.083 at optimal gift-efficiency $e=0.06$, $g = 116.67$, $eg = 7$
+											\begin{itemize}
+												\item Compared to $e=0$, welfare (gross of gift) goes up from 16.5 to 126.75. The entire difference is due to the positive effect of the material value of the gift (the full term is $\frac{1}{1-\de_h}pTeg$). The effective gift is $7$, which is much larger than the 1 in $\frac{1}{1-\de_h}pT\cdot 1$ that is there in both terms.
+												\item The increase in the size (cost) of the gift from 10.8 to 116.67 is smaller than the increase in gross-of-gift welfare
+											\end{itemize}
 									\end{itemize}
 							\end{itemize}
-			
+
+
 \subsubsection{To do and Notes}		
 	\color{ForestGreen} 
 			\begin{itemize}
 				\item Obviously we can come up with other parameterizations in which this may look a little more reasonable
 					\begin{itemize}
-						\item Go through welfare expressions carefully to understand where the welfare improvement is coming from
 						\item Can I derive an analytical expression for when the mediator enhances welfare?
 							\begin{itemize}
 								\item This is likely (surely?) to be when efficient gifts can't be sustained as a CSE
