--- a/notes.tex
+++ b/notes.tex
@@ -343,115 +343,6 @@ Leaving the two gift terms on the end intact, I simplify in the same way as in S
 								\item For the LHS to be positive, we need $p^2 \geq 1 - \de$, e.g. if $p = 0.5$, we need $\de \geq .75$
 							\end{itemize}
 								
-\subsubsection{Check with some parameterizations}								
-								Parameterization that is in the paper now:
-									\begin{itemize}
-										\item Let $T = 10$, $W=8$ and $D = 5$
-										\item Let $\de_h = .6$ and $\de_l = .3$. Assume $p = .2$. 
-										\item Threshold for high types to separate when concessions do not have future material value is $\de = \frac{8}{10+5} = .5\overline{3}$. By Theorem 2, separation through concessions is possible.
-										\item Minimum separating concession is $g^1 = \frac{p(1-d_l)(D+T)}{(1-d_l)(1-pT)+(1-p)D} = .\overline{63}$
-										\item Minimum patience level required for separation is $\de_h^1 = D(1-p)+1-pT + \frac{p(W-(T+D))}{g^1} = .7\overline{9}.$ Because the specified $\de_h$ is not involved in any of these calculations, we can see that for any $\de_h \in [.5\overline{3},.7\overline{9})$, separating through concessions is possible when concessions have no material value but is not possible when they do have future material value.
-										\item Minimum $e$ from Expression~\ref{eq:g6}:
-											\[
-											  0.2 - \frac{\left(1 - 0.3 \right) \left( 10 + 5 \right)}{g} \geq e \left( 0.2 + 10 - 0.3\cdot 10 + 8 \right)
-											\]
-											\[
-											  0.2 - \frac{0.7 \left( 15 \right)}{g} \geq e \left( 11.2 \right)
-											\]
-											\[
-											  \frac{0.2}{11.2} - \frac{0.7 \left( 15 \right)}{11.2g} \geq e 
-											\]
-											\[
-											  0.01786 - \frac{9.375}{g} \geq e 
-											\]
-										To keep $e \geq 0$, we need $g \geq 525$ (this is REALLY big compared to $W$ for instance). It's also huge compared to the optimal gifts when $e=0$ of 3 and when $e=1$ of $0.\overline{63}$.
-									\end{itemize}
-								
-							\vskip.2in	
-							Now let's try the same parameterization with $p=0.9$.
-									\begin{itemize}
-										\item Minimum $e$ from Expression~\ref{eq:g6}:
-											\[
-											  0.9 - \frac{\left(1 - 0.3 \right) \left( 10 + 5 \right)}{g} \geq e \left( 0.9 + 10 - 0.3\cdot 10 + 8 \right)
-											\]
-											\[
-											  0.9 - \frac{0.7 \left( 15 \right)}{g} \geq e \left( 11.9 \right)
-											\]
-											\[
-											  \frac{0.9}{11.9} - \frac{0.7 \left( 15 \right)}{11.9g} \geq e 
-											\]
-											\[
-											  0.07563 - \frac{8.8235}{g} \geq e 
-											\]
-										To keep $e \geq 0$, we need $g \geq 116.66$. This is still nearly an order of magnitude larger than $W$, and both the optimal gifts when $e=0$ of 13.5 and when $e=1$ of $\frac{p(1-d_l)(D+T)}{(1-d_l)(1-pT)+(1-p)D} = \frac{0.9(0.7)(15)}{0.7 \cdot (1-0.9)+(.1)5} = \frac{0.63\cdot15}{0.7 \cdot 0.1+.5} = 16.58$.
-									\end{itemize}
-							
-\vskip.3in
-``Parameterization 2'': goal was to make welfare higher under mediator; $We > W0$ and $e=1$ is not incentive compatible
-\begin{itemize}
-	\item \color{orange} T = 7, W = 8, D = 5, p = .9, $\de_l = .3$, $\de_h = .6$
-	\item Minimum $e$ from Expression~\ref{eq:g6}
-	  $$0.9 - \frac{\left(1 - 0.3 \right) \left( 7 + 5 \right)}{g} \geq e \left( 0.9 + 7 - 0.3 \cdot 7 + 8 \right)$$
-		$$0.9 - \frac{8.4}{g} \geq e \left(18 \right)$$
-		$$0.05 - \frac{0.466}{g} \geq e $$
-	\item The highest welfare comes from $e=.06$, which implies $g = 116.67$ (see e-g calculations.R)
-\end{itemize}
-		
-\vskip.2in
-Parameterization 3: $W1 > W0$ and $g1 > g0$. Welfare under mediator is never positive. 
-\begin{itemize}
-	\item $T = 7, \ W = 8, \ D = 5, \ p = .5, \ \de_l = .25, \ \de_h = .6$
-\end{itemize}
-
-\vskip.2in
-Parameterization 4: $W0 > W1 > We$ (mediator). Mediator optimally chooses e=0 anyway
-\begin{itemize}
-	\item $T = 7, \ W = 8, \ D = 5, \ p = .3, \ \de_l = .4, \ \de_h = .9$
-\end{itemize}
-
-\vskip.2in
-Parameterization 5: $W1 > W0 > We$ (mediator). Mediator optimally chooses $e=0.03$
-\begin{itemize}
-	\item $T = 6, \ W = 8, \ D = 5, \ p = .5, \ \de_l = .2, \ \de_h = .9$
-\end{itemize}
-
-\vskip.2in
-Parameterization 6: $We > W1 > W0$, $54 > 7.33 > 7$. Mediator optimally chooses $e=0.24$. Optimal gift is 50, effective gift is 12, vs. $g1 = .667$ and $g0 = 1$
-\begin{itemize}
-	\item $T = 1, \ W = 1, \ D = 1, \ p = .5, \ \de_l = .5, \ \de_h = 15/16=0.9375$
-\end{itemize}
-	
-						
-						\vskip.3in
-						Welfare comparisons (always for high type)
-							\begin{itemize}
-								\item When $e=1$: $\frac{1}{1-\de_h}\left\{pT(1+g^*) + (1-p)(W-D(1+g^*))\right\} - \frac{p(1-d_l)(D+T)}{(1-d_l)(1-pT)+(1-p)D}$
-									\begin{itemize}
-										\item \color{red} Parameterization in the paper: welfare is 7.18; gift is 0.63
-										\item \color{orange} Parameterization 2: $g^1$ is negative, creates negative upper bound for $\de_h$. Separating with concessions equilibrium can't be sustained.
-									\end{itemize}
-								\item When $e=0$: $\frac{1}{1-\de_h}\left\{pT + (1-p)(W-D)\right\} - p(T+D)$
-									\begin{itemize}
-										\item \color{red} Parameterization in the paper: welfare is 8; gift is 3
-										\item \color{orange} Parameterization 2: welfare is 5.7; gift is 10.8
-									\end{itemize}
-								\item When $0<e<1$ under a mediator: $\frac{1}{1-\de_h}\left\{pT(1+eg_M) + (1-p)(W-D)\right\} - g_M$
-									\begin{itemize}
-										\item Optimal $g_M$: Expression~\ref{eq:g2} creates a menu of $(e,g)$ pairs that satisfy the constraint:
-											\[
-												g_M \geq \frac{\left(1 - \de \right) \left( T + D \right)}{p - e \left( p + T - \de T + W \right)}
-											\]
-										\item We're assuming $p - e \left( p + T - \de T + W \right) > 0$ (assuming gifts must be non-negative)
-										\item Also $pg - \left(1 - \de \right) \left( T + D \right) \geq 0$ ($e$ version; this is WEAKER than the condition on $e$)
-										\item \color{red} For the parameterization in the paper, welfare is negative for $e=0$ and $e=0.01$, the only values of $e$ that lead to non-negative gifts; gifts range from 52.5 to 218.75	
-										\item \color{orange} Parameterization 2: welfare is 10.083 at optimal gift-efficiency $e=0.06$, $g = 116.67$, $eg = 7$
-											\begin{itemize}
-												\item Compared to $e=0$, welfare (gross of gift) goes up from 16.5 to 126.75. The entire difference is due to the positive effect of the material value of the gift (the full term is $\frac{1}{1-\de_h}pTeg$). The effective gift is $7$, which is much larger than the 1 in $\frac{1}{1-\de_h}pT\cdot 1$ that is there in both terms.
-												\item The increase in the size (cost) of the gift from 10.8 to 116.67 is smaller than the increase in gross-of-gift welfare
-											\end{itemize}
-									\end{itemize}
-							\end{itemize}
-
 \subsubsection{Welfare under Mediator vs. e=0}
 \label{sec:WM0}
 Here I'll try to derive a general result for when the welfare under a mediator would be higher than under $e=0$ separating with concessions equilibrium. \\
@@ -539,7 +430,129 @@ I've used Mathematica to find a parameterization under which this is true.
 		\]
 \end{itemize}
 
-			
+\subsubsection{Check with some parameterizations}								
+								Parameterization that is in the paper now:
+									\begin{itemize}
+										\item Let $T = 10$, $W=8$ and $D = 5$
+										\item Let $\de_h = .6$ and $\de_l = .3$. Assume $p = .2$. 
+										\item Threshold for high types to separate when concessions do not have future material value is $\de = \frac{8}{10+5} = .5\overline{3}$. By Theorem 2, separation through concessions is possible.
+										\item Minimum separating concession is $g^1 = \frac{p(1-d_l)(D+T)}{(1-d_l)(1-pT)+(1-p)D} = .\overline{63}$
+										\item Minimum patience level required for separation is $\de_h^1 = D(1-p)+1-pT + \frac{p(W-(T+D))}{g^1} = .7\overline{9}.$ Because the specified $\de_h$ is not involved in any of these calculations, we can see that for any $\de_h \in [.5\overline{3},.7\overline{9})$, separating through concessions is possible when concessions have no material value but is not possible when they do have future material value.
+										\item Minimum $e$ from Expression~\ref{eq:g6}:
+											\[
+											  0.2 - \frac{\left(1 - 0.3 \right) \left( 10 + 5 \right)}{g} \geq e \left( 0.2 + 10 - 0.3\cdot 10 + 8 \right)
+											\]
+											\[
+											  0.2 - \frac{0.7 \left( 15 \right)}{g} \geq e \left( 11.2 \right)
+											\]
+											\[
+											  \frac{0.2}{11.2} - \frac{0.7 \left( 15 \right)}{11.2g} \geq e 
+											\]
+											\[
+											  0.01786 - \frac{9.375}{g} \geq e 
+											\]
+										To keep $e \geq 0$, we need $g \geq 525$ (this is REALLY big compared to $W$ for instance). It's also huge compared to the optimal gifts when $e=0$ of 3 and when $e=1$ of $0.\overline{63}$.
+									\end{itemize}
+								
+							\vskip.2in	
+							Now let's try the same parameterization with $p=0.9$.
+									\begin{itemize}
+										\item Minimum $e$ from Expression~\ref{eq:g6}:
+											\[
+											  0.9 - \frac{\left(1 - 0.3 \right) \left( 10 + 5 \right)}{g} \geq e \left( 0.9 + 10 - 0.3\cdot 10 + 8 \right)
+											\]
+											\[
+											  0.9 - \frac{0.7 \left( 15 \right)}{g} \geq e \left( 11.9 \right)
+											\]
+											\[
+											  \frac{0.9}{11.9} - \frac{0.7 \left( 15 \right)}{11.9g} \geq e 
+											\]
+											\[
+											  0.07563 - \frac{8.8235}{g} \geq e 
+											\]
+										To keep $e \geq 0$, we need $g \geq 116.66$. This is still nearly an order of magnitude larger than $W$, and both the optimal gifts when $e=0$ of 13.5 and when $e=1$ of $\frac{p(1-d_l)(D+T)}{(1-d_l)(1-pT)+(1-p)D} = \frac{0.9(0.7)(15)}{0.7 \cdot (1-0.9)+(.1)5} = \frac{0.63\cdot15}{0.7 \cdot 0.1+.5} = 16.58$.
+									\end{itemize}
+							
+\vskip.3in
+``Parameterization 2'': goal was to make welfare higher under mediator; $We > W0$ and $e=1$ is not incentive compatible
+\begin{itemize}
+	\item \color{orange} T = 7, W = 8, D = 5, p = .9, $\de_l = .3$, $\de_h = .6$
+	\item Minimum $e$ from Expression~\ref{eq:g6}
+	  $$0.9 - \frac{\left(1 - 0.3 \right) \left( 7 + 5 \right)}{g} \geq e \left( 0.9 + 7 - 0.3 \cdot 7 + 8 \right)$$
+		$$0.9 - \frac{8.4}{g} \geq e \left(18 \right)$$
+		$$0.05 - \frac{0.466}{g} \geq e $$
+	\item The highest welfare comes from $e=.06$, which implies $g = 116.67$ (see e-g calculations.R)
+\end{itemize}
+		
+\vskip.2in
+Parameterization 3: $W1 > W0$ and $g1 > g0$. Welfare under mediator is never positive. 
+\begin{itemize}
+	\item $T = 7, \ W = 8, \ D = 5, \ p = .5, \ \de_l = .25, \ \de_h = .6$
+\end{itemize}
+
+\vskip.2in
+Parameterization 4: $W0 > W1 > We$ (mediator). Mediator optimally chooses e=0 anyway
+\begin{itemize}
+	\item $T = 7, \ W = 8, \ D = 5, \ p = .3, \ \de_l = .4, \ \de_h = .9$
+\end{itemize}
+
+\vskip.2in
+Parameterization 5: $W1 > W0 > We$ (mediator). Mediator optimally chooses $e=0.03$
+\begin{itemize}
+	\item $T = 6, \ W = 8, \ D = 5, \ p = .5, \ \de_l = .2, \ \de_h = .9$
+\end{itemize}
+
+\vskip.2in
+Parameterization 6: $We > W1 > W0$, $54 > 7.33 > 7$. Mediator optimally chooses $e=0.24$. Optimal gift is 50, effective gift is 12, vs. $g1 = .667$ and $g0 = 1$
+\begin{itemize}
+	\item $T = 1, \ W = 1, \ D = 1, \ p = .5, \ \de_l = .5, \ \de_h = 15/16=0.9375$
+\end{itemize}
+	
+						
+						\vskip.3in
+						Welfare comparisons (always for high type)
+							\begin{itemize}
+								\item When $e=1$ (``W1''): $\frac{1}{1-\de_h}\left\{pT(1+g^*) + (1-p)(W-D(1+g^*))\right\} - \frac{p(1-d_l)(D+T)}{(1-d_l)(1-pT)+(1-p)D}$
+									\begin{itemize}
+										\item \color{red} Parameterization in the paper: welfare is 7.18; gift is 0.63
+										\item \color{orange} Parameterization 2: $g^1$ is negative, creates negative upper bound for $\de_h$. Separating with concessions equilibrium can't be sustained.
+									\end{itemize}
+								\item When $e=0$ (``W0''): $\frac{1}{1-\de_h}\left\{pT + (1-p)(W-D)\right\} - p(T+D)$
+									\begin{itemize}
+										\item \color{red} Parameterization in the paper: welfare is 8; gift is 3
+										\item \color{orange} Parameterization 2: welfare is 5.7; gift is 10.8
+									\end{itemize}
+								\item When $0<e<1$ under a mediator (``WM''): $\frac{1}{1-\de_h}\left\{pT(1+eg_M) + (1-p)(W-D)\right\} - g_M$
+									\begin{itemize}
+										\item Optimal $g_M$: Expression~\ref{eq:g2} creates a menu of $(e,g)$ pairs that satisfy the constraint:
+											\[
+												g_M \geq \frac{\left(1 - \de \right) \left( T + D \right)}{p - e \left( p + T - \de T + W \right)}
+											\]
+										\item We're assuming $p - e \left( p + T - \de T + W \right) > 0$ (assuming gifts must be non-negative)
+										\item Also $pg - \left(1 - \de \right) \left( T + D \right) \geq 0$ ($e$ version; this is WEAKER than the condition on $e$)
+										\item \color{red} For the parameterization in the paper, welfare is negative for $e=0$ and $e=0.01$, the only values of $e$ that lead to non-negative gifts; gifts range from 52.5 to 218.75	
+										\item \color{orange} Parameterization 2: welfare is 10.083 at optimal gift-efficiency $e=0.06$, $g = 116.67$, $eg = 7$
+											\begin{itemize}
+												\item Compared to $e=0$, welfare (gross of gift) goes up from 16.5 to 126.75. The entire difference is due to the positive effect of the material value of the gift (the full term is $\frac{1}{1-\de_h}pTeg$). The effective gift is $7$, which is much larger than the 1 in $\frac{1}{1-\de_h}pT\cdot 1$ that is there in both terms.
+												\item The increase in the size (cost) of the gift from 10.8 to 116.67 is smaller than the increase in gross-of-gift welfare
+											\end{itemize}
+									\end{itemize}
+							\end{itemize}
+
+			\vskip.2in
+			There are six cases of welfare ordering: \\
+			\vskip.1in
+				\begin{tabular}{ l c c }
+					\un{Ordering}       & \un{$WM < 0$} & \un{$WM > 0$} \\
+					$WM > W1 > W0$ &  & P6 \\
+					$WM > W0 > W1$ &  & P2 (W1 not IC) \\
+					$W1 > WM > W0$ &  &  \\
+					$W1 > W0 > WM$ & P3 & P5 \\
+					$W0 > W1 > WM$ & P1 (paper) & P4 \\
+					$W0 > WM > W1$ &    &
+				\end{tabular}
+				
+							
 \subsubsection{To do and Notes}		
 	\color{ForestGreen} 
 			\begin{itemize}
