clean up notes on weapons decommissioning

--- a/notes.tex
+++ b/notes.tex
@@ -60,26 +60,29 @@ bookmarksopen=true]{hyperref}
 \section{Alternative Examples}
 
 \subsection{Destroying weapons}
-I'm not sure this is perfect, since it's a bit of a stretch to say they could be used for civil society (police?)
+I'm not sure this is perfect: it's a bit of a stretch to say the weapons could be given to the negotiating partner who could use them to build up civil society, but I guess if they're given to non-militarized police to enforce law and order...
 \begin{itemize}
-	\item FARC in 2017 (Colombia): https://colombiareports.com/final-un-figures-destruction-farcs-arsenal/,
+	\item FARC in 2017 (Colombia)
 		\begin{itemize}
 			\item https://www.crisisgroup.org/latin-america-caribbean/andes/colombia/statement-transitional-justice-agreement-between-colombian-government-and-farc
+			\item https://news.un.org/en/story/2017/06/560442-colombia-un-mission-collects-nearly-all-remaining-weapons-farc-ep
+			\item https://unmc.unmissions.org/en/un-mission-finalises-extraction-arms-caches-and-laying-down-weapons-farc-ep
 		\end{itemize}
-	\item Philippines / Bangsamoro region: https://www.crisisgroup.org/asia/south-east-asia/philippines/301-philippines-militancy-and-new-bangsamoro
-	\item Northern Ireland: Oct 7 2007 deadline to start weapons decommissioning (https://www.crisisgroup.org/crisiswatch/october-2007)
-	\item Yemen, https://www.crisisgroup.org/crisiswatch/print?page=1&location%255B%255D=28&date_range=custom&from_month=01&from_year=2020&to_month=04&to_year=2020&t=CrisisWatch+Database+Filter
+	\item Northern Ireland
 		\begin{itemize}
-			\item  As part of “Phase 2” agreement, govt and STC exchanged 53 prisoners 12 Jan. Rival Yemeni groups 24 Jan completed transfer of heavy weapons in Aden to Saudi-controlled base in city within fifteen-day timeframe. After early redeployments from Aden, process again stalled late Jan, with local appointments still not made. 
+			\item Report of the Independent International Commission on Decomissioning: https://cain.ulster.ac.uk/events/peace/decommission/iicd260905.pdf
+			\item Note two years later: https://www.crisisgroup.org/crisiswatch/october-2007
+			\item Summary: https://cain.ulster.ac.uk/events/peace/decommission.htm
 		\end{itemize}
-	\item Timor L'este, July 2007, https://www.crisisgroup.org/crisiswatch/july-2006
+		\item Philippines / Bangsamoro region: https://www.crisisgroup.org/asia/south-east-asia/philippines/301-philippines-militancy-and-new-bangsamoro
+	\item Yemen, \url{https://www.crisisgroup.org/crisiswatch/print?page=1&location%255B%255D=28&date_range=custom&from_month=01&from_year=2020&to_month=04&to_year=2020&t=CrisisWatch+Database+Filter}
 		\begin{itemize}
-			\item Situation showed signs of improvement as former Foreign and Defence Minister Ramos-Horta sworn in as new PM 10 July, prompting more rebels to surrender weapons. New cabinet sworn in 14 July with PM retaining defence portfolio. TL asked UN Security Council for 800 international police for 2 to 5 years. UN Special Envoy told UNSC substantial long-term military and police presence required. Peacekeepers arrested 20 for illegal possession of weapons, including rebel leader Reinado. UN commission of inquiry set October deadline for its investigations into April-May violence. Former PM Alkatiri questioned over allegations he paid rebels to attack opponents. International police force gradually replacing military patrols in Dili as first Australian troops withdrew. Violent attacks by teenage gangs increased, including attack on UNICEF worker
+			\item https://www.arabnews.com/node/1292091/middle-east
+			\item As part of “Phase 2” agreement...Rival Yemeni groups 24 Jan completed transfer of heavy weapons in Aden to Saudi-controlled base in city within fifteen-day timeframe. After early redeployments from Aden, process again stalled late Jan, with local appointments still not made. 
 		\end{itemize}
-	\item Turkey and the PKK, Nov 6, 2014
 \end{itemize}
 
-Other conflicts to investigate
+\subsection{Other conflicts to investigate}
 \begin{itemize}	
 	\item Liberia
 	\item What happened to make peace in Sudan?
