add notes on other examples of inefficient concessions

--- a/notes.tex
+++ b/notes.tex
@@ -62,6 +62,7 @@ bookmarksopen=true]{hyperref}
 \subsection{Destroying weapons}
 I'm not sure this is perfect: it's a bit of a stretch to say the weapons could be given to the negotiating partner who could use them to build up civil society, but I guess if they're given to non-militarized police to enforce law and order...
 \begin{itemize}
+	\item On disarmament in general: https://cain.ulster.ac.uk/events/peace/docs/disarmament.htm
 	\item FARC in 2017 (Colombia)
 		\begin{itemize}
 			\item https://www.crisisgroup.org/latin-america-caribbean/andes/colombia/statement-transitional-justice-agreement-between-colombian-government-and-farc
@@ -80,18 +81,21 @@ I'm not sure this is perfect: it's a bit of a stretch to say the weapons could b
 			\item https://www.arabnews.com/node/1292091/middle-east
 			\item As part of “Phase 2” agreement...Rival Yemeni groups 24 Jan completed transfer of heavy weapons in Aden to Saudi-controlled base in city within fifteen-day timeframe. After early redeployments from Aden, process again stalled late Jan, with local appointments still not made. 
 		\end{itemize}
+	\item Liberia: https://peaceaccords.nd.edu/accord/accra-peace-agreement, https://www.un.org/press/en/1999/19990726.SGSM7078.html
 \end{itemize}
 
-\subsection{Other conflicts to investigate}
+\subsection{Other conflicts}
+I investigated these for different types of inefficiencies but did not find anything useful
 \begin{itemize}	
-	\item Liberia
+	\item North and South Korea
 	\item What happened to make peace in Sudan?
+	\item Liberia--don't see anything in the Accra accords
 	\item Taliban in Afghanistan? February 29, 2020
 		\begin{itemize}
 			\item No help from International Crisis Group
+			\item Read agreement on state.gov; it's only four pages long, not much too it
 		\end{itemize}
 	\item Iran deal with the U.S.: JCPOA
-	\item North and South Korea
 \end{itemize}
 
 \section{Make mediator work}
